--- a/docs/deploy.adoc
+++ b/docs/deploy.adoc
@@ -7,9 +7,9 @@ OpenShift is a commercially supported distribution of Kubernetes from Red Hat. T
 
 == Build native image
 
-Let's rebuild our native image with all our changes thus far. Run the **Package for OpenShift** command again:
+Let's rebuild our native image with all our changes thus far. Run the **Build Native App** command again:
 
-image::cmd-package.png[livecoding, 700]
+image::cmd-native.png[livecoding, 700]
 
 As you recall, the output of this process is a native Linux binary. Let's deploy it to our cluster.
 
@@ -92,9 +92,14 @@ Finally, make sure it's actually done rolling out:
 oc rollout status -w dc/people
 ----
 
+[NOTE]
+====
+`dc` in `dc/people` is shorthand for OpenShift's _DeploymentConfig_ object type. There are other shortcuts like `bc` for _BuildConfig_, `svc` for Kubernetes _Services_, and so on.
+====
+
 Wait for that command to report `replication controller "people-1" successfully rolled out` before continuing.
 
-And now we can access using `curl` once again. In the Terminal, run this command, which constructs the URL using `oc get route` and then calls `curl` to access the endpoint:
+And now we can access using `curl` once again. In the Terminal, run this command to access the endpoint:
 
 [source,sh,role="copypaste copypaste"]
 ----
@@ -156,7 +161,7 @@ Earlier you implemented a series of MicroProfile health checks. To make OpenShif
 
 [source,sh,role="copypaste"]
 ----
-oc set probe dc/people --readiness --initial-delay-seconds=30 --get-url=http://:8080/health/ready && oc set probe dc/people --liveness --initial-delay-seconds=30 --get-url=http://:8080/health/live
+oc set probe dc/people --readiness --initial-delay-seconds=5 --period-seconds=5 --failure-threshold=20 --get-url=http://:8080/health/ready && oc set probe dc/people --liveness --initial-delay-seconds=5 --period-seconds=5 --failure-threshold=20  --get-url=http://:8080/health/live
 ----
 
 You'll see in the Topology view that the app is re-deployed with the new settings and the old app will be _terminated_ soon after:
